[gd_scene load_steps=3 format=3 uid="uid://cobfxotpk11ed"]

[ext_resource type="Script" path="res://core/ui/config/player_config.gd" id="1_dfnna"]
[ext_resource type="PackedScene" uid="uid://b00fb5ox2w4oh" path="res://core/ui/car_picker.tscn" id="2_lyx4f"]

[node name="PlayerConfig" type="VBoxContainer"]
script = ExtResource("1_dfnna")

[node name="CarPicker" parent="." instance=ExtResource("2_lyx4f")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Player name"

[node name="PlayerName" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Player"
max_length = 16

[connection signal="player_config_changed" from="." to="." method="save_player"]
[connection signal="car_selected" from="CarPicker" to="." method="_on_car_picker_car_selected"]
[connection signal="text_submitted" from="HBoxContainer/PlayerName" to="." method="_on_player_name_text_submitted"]
